--- a/Lab6/app/build.gradle
+++ b/Lab6/app/build.gradle
@@ -38,4 +38,11 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:1.1.0"
     implementation "androidx.cardview:cardview:1.0.0"
 
+    //Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+
+    //oakhttp
+    implementation 'com.squareup.okhttp3:okhttp:3.8.1'
+
 }
