update add post api

--- a/Lab6/app/build.gradle
+++ b/Lab6/app/build.gradle
@@ -60,4 +60,5 @@ dependencies {
     api "org.jetbrains.kotlinx:kotlinx-coroutines-core:$rootProject.coroutines"
     api "org.jetbrains.kotlinx:kotlinx-coroutines-android:$rootProject.coroutines"
 
+    implementation 'com.google.code.gson:gson:2.8.5'
 }
